--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/bmxpiku/loadtest#readme",
   "dependencies": {
+    "bpc_client": "^2.0.1",
     "dev-null": "^0.1.1",
-    "express": "^4.16.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "request": "^2.88.0",
-    "stream": "0.0.2"
+    "request": "^2.88.2",
+    "stream": "0.0.2",
+    "tslib": "^2.1.0"
   }
 }
